cmake_minimum_required(VERSION 3.10)
project(DataStructureFinal)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Topic 1: Student Grade System
add_executable(Topic1_Student Topic1_Student/main.cpp)

# Topic 2: Dictionary System
add_executable(Topic2_Dictionary Topic2_Dictionary/main.cpp)

# Topic 3: Campus Navigation
add_executable(Topic3_Campus Topic3_Campus/main.cpp)
